# cargo-swift

./: .gitignore  CONFIG-DRAFT.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: audit.yml  ci.yml  clippy.yml  end-to-end.yml  examples.yml  publish.yml
readme/: demo.tape
src/: bindings.rs  command.rs  config.rs  error.rs  lib.rs  lib_type.rs  main.rs  metadata.rs  path.rs  spinners.rs  step.rs  swiftpackage.rs  targets.rs  templating.rs  xcframework.rs
src/commands/: init.rs  package.rs
src/console/: command.rs  config.rs  error.rs  messages.rs  spinners.rs  step.rs  theme.rs
swift-examples/hello-world-macro-multi-crate/app/: .gitignore
swift-examples/hello-world-macro-multi-crate/app/HelloWorld/: ContentView.swift
swift-examples/hello-world-macro-multi-crate/greeter/: .gitignore  Cargo.toml
swift-examples/hello-world-macro-multi-crate/greeter/greeter-lib/: Cargo.toml
swift-examples/hello-world-macro-multi-crate/greeter/greeter-lib/src/: lib.rs
swift-examples/hello-world-macro-multi-crate/greeter/src/: lib.rs
swift-examples/hello-world-macro/greeter/: Cargo.toml
swift-examples/hello-world-macro/greeter/src/: lib.rs  lib.udl
swift-examples/hello-world/HelloWorld/: .gitignore
swift-examples/hello-world/HelloWorld/HelloWorld/: ContentView.swift
swift-examples/hello-world/HelloWorld/HelloWorld.xcodeproj/: project.pbxproj
swift-examples/hello-world/app/HelloWorld/: ContentView.swift  HelloWorldApp.swift
swift-examples/hello-world/app/HelloWorld.xcodeproj/: project.pbxproj
swift-examples/hello-world/greeter/: Cargo.toml  build.rs
swift-examples/hello-world/greeter/src/: greeter.udl  lib.rs  lib.udl
template/: Cargo.toml  lib.rs  template.Cargo.toml  template.lib.rs  template.plain.rs  template.plain.udl  template.toml  template.udl
templates/: Cargo.toml  Package.swift  build.rs  lib.rs  lib.udl  template.toml
testing/end-to-end/: init.swift  package.swift
