[package]
name = "cargo-swift"
description = "A cargo plugin to easily build Swift packages from Rust code for use in iOS and macOS applications"
version = "0.8.0"
edition = "2021"
authors = ["Antonius Naumann <git@antonius.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antoniusnaumann/cargo-swift"
keywords = ["macos", "ios", "uniffi", "spm", "swift"]
categories = [
  "command-line-utilities",
  "development-tools",
  "development-tools::build-utils",
  "development-tools::cargo-plugins",
  "development-tools::ffi",
]
exclude = ["/readme", "/.github", "/testing", "/swift-examples", "*-DRAFT.md"]

[dependencies]
camino = "1.1.7"
cargo_metadata = "0.15.4"
clap = { version = "4.5.11", features = ["derive"] }
convert_case = "0.6.0"
glob = "0.3.1"
nonempty = "0.10.0"
serde = { version = "1.0.204", features = ["derive"] }

# Templating
askama = "0.12.1"

# Terminal UI
console = "0.15.8"
dialoguer = { version = "0.11.0", default-features = false }
execute = "0.2.13"
indicatif = "0.17.8"

# FFI Bindings
uniffi_bindgen = { version = "=0.28.1" }

# Error Handling
anyhow = "1.0.86"
thiserror = "1.0.63"
lazy_static = "1.5.0"
itertools = "0.13.0"

[features]
