[package]
name = "cargo-swift"
description = "A cargo plugin to easily build Swift packages from Rust code for use in iOS and macOS applications"
version = "0.11.0"
edition = "2021"
authors = ["Antonius Naumann <git@antonius.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/antoniusnaumann/cargo-swift"
keywords = ["macos", "ios", "uniffi", "spm", "swift"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
    "development-tools::cargo-plugins",
    "development-tools::ffi",
]
exclude = ["/readme", "/.github", "/testing", "/swift-examples", "*-DRAFT.md"]

[dependencies]
camino = "1.1.9"
cargo_metadata = "0.23.1"
clap = { version = "4.5.36", features = ["derive"] }
convert_case = "0.11.0"
glob = "0.3.2"
nonempty = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }

# Templating
askama = "0.15.0"

# Terminal UI
console = "0.16.2"
dialoguer = { version = "0.12.0", default-features = false }
execute = "0.2.13"
indicatif = "0.18.3"

# FFI Bindings
uniffi_bindgen = { version = "=0.31.0" }

# Error Handling
anyhow = "1.0.98"
thiserror = "2.0.18"
lazy_static = "1.5.0"
itertools = "0.14.0"

[features]
