workspace = { members = ["greeter-lib"] }

[package]
name = "greeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "greeter"

[dependencies]
uniffi = "0.29"
greeter-lib = { path = "./greeter-lib" }
