[package]
name = "greeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "greeter"

[dependencies]
uniffi = "0.29"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
